kubernetes/temporal-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-ui-deployment
  labels:
    app: temporal-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-ui-deployment
  template:
    metadata:
      labels:
        app: temporal-ui-deployment
    spec:
      containers:
        - name: temporal-ui-deployment
          image: temporalio/ui:2.34.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: temporal-ui-deployment-data
              mountPath: /var/lib/temporal-ui/data
      volumes:
        - name: temporal-ui-deployment-data
          emptyDir: {}
