kubernetes/temporal-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui-service
  labels:
    app: temporal-ui-service
spec:
  type: NodePort
  selector:
    app: temporal-ui-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
